# GxEPD2

./: CMakeLists.txt
src/: GxEPD2_EPD.cpp
src/gdey/: GxEPD2_579_GDEY0579T93.cpp
src/gdey3c/: GxEPD2_579c_GDEY0579Z93.cpp
