set(requires
   "arduino"
   "Adafruit-GFX-Library"
)

set(sources
    "./extras/sw_spi/src/GxEPD2_EPD.cpp"
    "./src/epd7c/GxEPD2_565c_GDEP0565D90.cpp"
    "./src/epd7c/GxEPD2_730c_GDEY073D46.cpp"
    "./src/epd7c/GxEPD2_565c.cpp"
    "./src/epd7c/GxEPD2_730c_GDEP073E01.cpp"
    "./src/epd7c/GxEPD2_730c_ACeP_730.cpp"
    "./src/epd/GxEPD2_213_BN.cpp"
    "./src/epd/GxEPD2_213_T5D.cpp"
    "./src/epd/GxEPD2_290_I6FD.cpp"
    "./src/epd/GxEPD2_213_flex.cpp"
    "./src/epd/GxEPD2_213_B74.cpp"
    "./src/epd/GxEPD2_154_T8.cpp"
    "./src/epd/GxEPD2_150_BN.cpp"
    "./src/epd/GxEPD2_750_T7.cpp"
    "./src/epd/GxEPD2_266_BN.cpp"
    "./src/epd/GxEPD2_102.cpp"
    "./src/epd/GxEPD2_583.cpp"
    "./src/epd/GxEPD2_290_T5.cpp"
    "./src/epd/GxEPD2_750.cpp"
    "./src/epd/GxEPD2_154_M10.cpp"
    "./src/epd/GxEPD2_371.cpp"
    "./src/epd/GxEPD2_213.cpp"
    "./src/epd/GxEPD2_370_TC1.cpp"
    "./src/epd/GxEPD2_290_T94_V2.cpp"
    "./src/epd/GxEPD2_420.cpp"
    "./src/epd/GxEPD2_213_B72.cpp"
    "./src/epd/GxEPD2_583_T8.cpp"
    "./src/epd/GxEPD2_290_T5D.cpp"
    "./src/epd/GxEPD2_290_BS.cpp"
    "./src/epd/GxEPD2_290.cpp"
    "./src/epd/GxEPD2_154_M09.cpp"
    "./src/epd/GxEPD2_260_M01.cpp"
    "./src/epd/GxEPD2_290_M06.cpp"
    "./src/epd/GxEPD2_213_B73.cpp"
    "./src/epd/GxEPD2_1160_T91.cpp"
    "./src/epd/GxEPD2_260.cpp"
    "./src/epd/GxEPD2_420_M01.cpp"
    "./src/epd/GxEPD2_1248.cpp"
    "./src/epd/GxEPD2_154_D67.cpp"
    "./src/epd/GxEPD2_270.cpp"
    "./src/epd/GxEPD2_290_T94.cpp"
    "./src/epd/GxEPD2_154.cpp"
    "./src/epd/GxEPD2_213_M21.cpp"
    "./src/gdeq3c/GxEPD2_583c_GDEQ0583Z31.cpp"
    "./src/gdeq/GxEPD2_426_GDEQ0426T82.cpp"
    "./src/gdeq/GxEPD2_583_GDEQ0583T31.cpp"
    "./src/gdeq/GxEPD2_310_GDEQ031T10.cpp"
    "./src/gdem3c/GxEPD2_1330c_GDEM133Z91.cpp"
    "./src/gdey3c/GxEPD2_579c_GDEY0579Z93.cpp"
    "./src/gdey3c/GxEPD2_420c_GDEY042Z98.cpp"
    "./src/gdey3c/GxEPD2_1160c_GDEY116Z91.cpp"
    "./src/gdem/GxEPD2_1020_GDEM102T91.cpp"
    "./src/gdem/GxEPD2_1330_GDEM133T91.cpp"
    "./src/gdem/GxEPD2_1085_GDEM1085T51.cpp"
    "./src/gdey/GxEPD2_270_GDEY027T91.cpp"
    "./src/gdey/GxEPD2_154_GDEY0154D67.cpp"
    "./src/gdey/GxEPD2_579_GDEY0579T93.cpp"
    "./src/gdey/GxEPD2_290_GDEY029T71H.cpp"
    "./src/gdey/GxEPD2_266_GDEY0266T90.cpp"
    "./src/gdey/GxEPD2_213_GDEY0213B74.cpp"
    "./src/gdey/GxEPD2_750_GDEY075T7.cpp"
    "./src/gdey/GxEPD2_420_GDEY042T81.cpp"
    "./src/gdey/GxEPD2_290_GDEY029T94.cpp"
    "./src/it8951/GxEPD2_it60.cpp"
    "./src/it8951/GxEPD2_it60_1448x1072.cpp"
    "./src/it8951/GxEPD2_it78_1872x1404.cpp"
    "./src/it8951/GxEPD2_it103_1872x1404.cpp"
    "./src/epd4c/GxEPD2_290c_GDEY029F51H.cpp"
    "./src/epd4c/GxEPD2_420c_GDEY0420F51.cpp"
    "./src/epd4c/GxEPD2_266c_GDEY0266F51H.cpp"
    "./src/epd4c/GxEPD2_0579c_GDEY0579F51.cpp"
    "./src/epd4c/GxEPD2_437c.cpp"
    "./src/epd4c/GxEPD2_1160c_GDEY116F51.cpp"
    "./src/epd4c/GxEPD2_300c.cpp"
    "./src/epd4c/GxEPD2_213c_GDEY0213F51.cpp"
    "./src/GxEPD2_EPD.cpp"
    "./src/other/GxEPD2_420_GYE042A87.cpp"
    "./src/other/GxEPD2_420_SE0420NQ04.cpp"
    "./src/epd3c/GxEPD2_154_Z90c.cpp"
    "./src/epd3c/GxEPD2_154c.cpp"
    "./src/epd3c/GxEPD2_290_C90c.cpp"
    "./src/epd3c/GxEPD2_290c.cpp"
    "./src/epd3c/GxEPD2_213c.cpp"
    "./src/epd3c/GxEPD2_750c_Z90.cpp"
    "./src/epd3c/GxEPD2_213_Z98c.cpp"
    "./src/epd3c/GxEPD2_290_Z13c.cpp"
    "./src/epd3c/GxEPD2_583c_Z83.cpp"
    "./src/epd3c/GxEPD2_750c_Z08.cpp"
    "./src/epd3c/GxEPD2_270c.cpp"
    "./src/epd3c/GxEPD2_420c_Z21.cpp"
    "./src/epd3c/GxEPD2_1248c.cpp"
    "./src/epd3c/GxEPD2_750c.cpp"
    "./src/epd3c/GxEPD2_583c.cpp"
    "./src/epd3c/GxEPD2_213_Z19c.cpp"
    "./src/epd3c/GxEPD2_266c.cpp"
    "./src/epd3c/GxEPD2_420c.cpp"
)

idf_component_register(
    SRCS "${sources}"
    INCLUDE_DIRS "src"
    REQUIRES "${requires}"
)
